2016-04-05  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (struct NVIC): Add volatile qualifier to members.
	(chx_spin_init): New.
	(chopstx_mutex_init, chopstx_cond_init): Call chx_spin_init.
	(chx_init): Initialize the spinlocks for INTR_LOCK, Q_READY,
	Q_TIMER, and Q_JOIN.

2016-03-08  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.h (CHOPSTX_THREAD_SIZE): Align by 8.
	* chopstx.c (struct chx_thread): Add W field to align.  This is to
	comply AAPCS (ARM Architecture Procedure Call Standard).
	(chx_init): Initialize W.

	* example-cdc/{usb_stm32f103.c,usb_lld.h}: Update from Gnuk.
	* example-cdc/usb-cdc.c: Update.

2015-11-05  Niibe Yutaka  <gniibe@fsij.org>

	* example-cdc/sample.c: Enhanced to be echo service.

2015-09-15  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 0.10.
	* doc/chopstx.texi (VERSION): 0.10.

	* example-cdc/usb_stm32f103.c: Update from Gnuk.

2015-09-14  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (q_exit): Remove.
	(chx_init, chx_exit): Remove access to Q_EXIT.
	(chx_release_irq_thread): Fix removing form the list.

2015-09-11  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_init, chopstx_create): Fix the initial value
	of flag_cancelable.

2015-09-10  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 0.09.
	* doc/chopstx.texi (VERSION): 0.09.

	* chopstx.c (chx_release_irq_thread): Rename.

2015-09-09  Niibe Yutaka  <gniibe@fsij.org>

	* example-cdc/usb-cdc.c (usb_cb_ctrl_write_finish): Distinguish
	DTR signal.
	(usb_cb_device_reset): Fix USB reset handling.

	* chopstx.c (chopstx_usec_wait_var, chopstx_cond_wait)
	(chopstx_intr_wait): Call chopstx_testcancel.
	(chopstx_setcancelstate): New.

	* chopstx.c (chx_systick_reset, chx_systick_reload)
	(chx_systick_get): Factor out systick functions.
	(chx_prio_init): Factor out.

2015-09-08  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_request_preemption): Add PRIO argument and check
	the condition inside.
	(chx_timer_expired, chx_handle_intr): Call unconditionally.
	(intr_lock): New variable.