@@ -1,3 +1,11 @@
+2016-04-06  Niibe Yutaka  <gniibe@fsij.org>
+
+	* chopstx.c (struct chx_thread): Move tcontext field.
+	(chx_cpu_sched_lock, chx_cpu_sched_unlock): Use CPSID/CPSIE.
+	(chx_sched): Don't use SVC.  Return integer value.
+	(chopstx_usec_wait_var): Don't use R8.
+	(preempt): Modify so that we don't use SVC.
+
 2016-04-05  Niibe Yutaka  <gniibe@fsij.org>
 
 	* chopstx.c (struct NVIC): Add volatile qualifier to members.
